# Autopilot

./: .env.example  .gitignore  AutoPilot_Agent_Project_Plan.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/app/: __init__.py  diagnosis.py  main.py  tools.py  worker.py
agent/app/rag/: __init__.py  provider.py
agent/tests/: test_health.py  test_rag.py  test_tools.py
backend/: Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/auth/: service.go  service_test.go
backend/internal/config/: config.go
backend/internal/httpapi/: handlers.go  middleware.go  observability.go  router.go  router_test.go  tasks.go  workspace.go
backend/internal/model/: models.go
backend/internal/platform/: database.go
backend/internal/queue/: publisher.go
deploy/ragflow/: README.md
docs/: api-v2.md  openapi.yaml
knowledge/manuals/: high_voltage_battery.md  maintenance_guide.md
perf/: README.md  REPORT.md  STABILITY_100.md
perf/k6/: load.js
perf/results/: cache.json  e2e.json  submit.json
web/: Dockerfile  OPEN_SOURCE.md  index.html  nginx.conf  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/agent/: page.tsx
web/app/diagnostics/: page.tsx
web/app/tasks/: page.tsx
web/app/trips/: page.tsx
web/app/vehicles/: page.tsx
web/app/vehicles/[id]/: page.tsx
web/components/: app-shell.tsx  dashboard-charts.tsx  page-kit.tsx  providers.tsx
web/lib/: api.ts  demo-data.ts
web/src/: api.ts  main.tsx  styles.css
(+1 files in other folders)
